rewrite end-game check

--- a/app/pages/ulttictactoe.html
+++ b/app/pages/ulttictactoe.html
@@ -37,7 +37,7 @@
 <component id="UTicTacToe">
   <div class="container">
     <div class="columns">
-      <div class="column col-9">
+      <div class="column col-9 board">
         <UBoard board="<- ustore.board" step="<- ustore.step" finished="<- ustore.finished" />
       </div>
       <div class="column col-1"></div>
