--- a/app/app.html
+++ b/app/app.html
@@ -47,8 +47,8 @@
 </component>
 
 <component id="MainPage">
-  <Navbar caption="Gallery" />
-  <Panel caption="Icons">
+  <Navbar caption="Info" />
+  <!-- <Panel caption="Icons">
     <LoadingIndicator />
     Using Font
     <Icon type="cog" />
@@ -63,7 +63,7 @@
             class="m-2" />
     <Button icon="123" caption="Link" link />
   </Panel>
-  <Panel caption="Panel" hint="with hint"> here... </Panel>
+  <Panel caption="Panel" hint="with hint"> here... </Panel> -->
 
   <button click="->" data-clicked={clicked|inc}>Clicked {clicked|or:0}</button>
 
