--- a/app/pages/ulttictactoe.html
+++ b/app/pages/ulttictactoe.html
@@ -34,19 +34,32 @@
   </div>
 </component>
 
+<component id="TTTPlayer">
+  <div>
+    <h6>Select {name}</h6>  
+    <button class="btn control" data-player={player} data-type="1" selected="{select|log}}" click="->ustore.togglePlayer">Player</button>
+    <button class="btn control" data-player={player} data-type="2" selected="{select[1]}" click="->ustore.toggleai">AI</button>
+  </div>
+</component>
+
 <component id="UTicTacToe">
   <div class="container">
     <div class="columns">
-      <div class="column col-9 board">
+      <div class="column col-8 board">
         <UBoard board="<- ustore.board" step="<- ustore.step" finished="<- ustore.finished" />
       </div>
-      <div class="column col-1"></div>
+      <!-- <div class="column col-1"></div> -->
       <div class="column col-2">
+        <h6>Options</h6>
         <button class="btn btn-error control" click="->ustore.reset">Reset</button>
+        <button class="btn btn-error control" click="->ustore.airequest">AI move</button>
+        <!-- <TTTPlayer player="1" name="Cross" select="<- ustore.cross" />
+        <TTTPlayer player="2" name="Circle" select="<- ustore.circle" />               -->
       </div>
     </div>
   </div>
 </component> 
+
 
 <component id="UlttictactoePage">
   <h4>UltimateTicTacToe</h4>
