--- a/app/pages/tictactoe.html
+++ b/app/pages/tictactoe.html
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="columns">
       <div class="column col-6">
-        <Board board="<- store.board" step="<- store.step" finished="<- store.finished" />
+        <Board board="<- store.board|log" step="<- store.step|log" finished="<- store.finished|log"/>
       </div>
       <div class="column col-1"></div>
       <div class="column col-3">
