--- a/app/pages/ulttictactoe.html
+++ b/app/pages/ulttictactoe.html
@@ -12,7 +12,7 @@
   <div class="column col-4 subBoard subBoard-{available} subWin-{finished}">  
     <div class="hider"></div>
     <div class="columns" ui:for="row of board">      
-      <UCell ui:for="col of row.cols" col={col.id} row={row.id} value={col.value} subcol={subcol} subrow={subrow} />      
+      <UCell ui:for="col of row.cols" subcol={col.id} subrow={row.id} value={col.value} col={ucol} row={urow} />      
     </div>
     
   </div>
@@ -21,22 +21,22 @@
 <component id="UBoard">  
   <h6>{:gameStates|gameState:@finished:@step} </h6>
   <div class="container">
-    <div class="columns" ui:for="row of board">
-      <USubBoard 
+    <div class="columns" ui:for="row of board|log">
+       <USubBoard 
         ui:for="col of row.cols" 
-        board="{board|subBoard:@row.id:@col.id}" 
-        subcol={col.id}
-        subrow={row.id} 
+        board="{board|subGame:@row.id:@col.id}" 
+        ucol={col.id}
+        urow={row.id} 
         available={col.available}
         finished={col.finished}
-        uvalue={col.value} />
+        uvalue={col.value} /> 
     </div>
   </div>
 </component>
  <!-- state="<-ustore.state" handler="->ustore.stepcell" -->
  <component id="UTTTPlayer">
 
-  <ui:tag tag="PlayerController{type}" player={pplayer} type={type} state="<-ustore.state|log" ref="->ustore.ref" handler="->ustore.makeMoveOutside" />
+  <ui:tag tag="PlayerController{type}" player={pplayer} type={type} state="<-ustore.state" ref="->ustore.ref" handler="->ustore.makeMoveOutside" />
   <div>
     <h6>Select {name}</h6>      
     <button ui:for="pl of :players"  class="btn control btn-{pl.name|equals:@type|then:primary}" data-player={pplayer} data-type="{pl.name}" click="-> ustore.switch">{pl.name}</button>
@@ -47,14 +47,14 @@
   <div class="container">
     <div class="columns">
       <div class="column col-8 board">
-        <UBoard board="<- ustore.board" step="<- ustore.step" finished="<- ustore.finished" />
+        <UBoard board="<- ustore.board" step="<- ustore.step" finished="<- ustore.finished" /> 
       </div>
       <!-- <div class="column col-1"></div> -->
       <div class="column col-2">
         <h6>Options</h6>
         <button class="btn btn-error control" click="->ustore.reset">Reset</button>
         <button class="btn btn-error control" click="->ustore.mctsrequest">AI move</button>
-        <UTTTPlayer pplayer="1" name="Cross" type="<- ustore.cross" />
+        <UTTTPlayer pplayer="1" name="Cross" type="<- ustore.cross|log" />
         <UTTTPlayer pplayer="2" name="Circle" type="<- ustore.circle" />               
       </div>
     </div>
@@ -65,6 +65,6 @@
 <component id="UlttictactoePage">
   <h4>UltimateTicTacToe</h4>
 
-  <UTTT ui:ref="ustore" />
+  <UTTTStore ui:ref="ustore" />
   <UTicTacToe />
 </component>
