Added  MCTS for uttt

--- a/app/commons/elements.html
+++ b/app/commons/elements.html
@@ -64,3 +64,7 @@
         </li>
     </ul>
 </component>
+
+<component id="StatRow">
+    <p>Cross {cross} – {crossWin} Circle {circle} – {circleWin}  Total - {total}</p>
+</component>
