--- a/app/pages/labyrinth.html
+++ b/app/pages/labyrinth.html
@@ -23,11 +23,11 @@
     <input type="range" min="100" max="300" value={maxlifetime} class="slider" change="->nstore.maxlifetime"  id="maxlifetimeRange">
   </div> 
   <div class="slidecontainer">
-    <label for="cyclesltconstRange">Const LT cycles: {cyclesltconst} </label>  
+    <label for="cyclesltconstRange">Update LT in cycles: {cyclesltconst} </label>  
     <input type="range" min="1" max="10" value={cyclesltconst} class="slider" change="->nstore.cyclesltconst"  id="cyclesltconstRange">
   </div> 
   <div class="slidecontainer">
-    <label for="addltRange">Const LT cycles: {addlt} </label>  
+    <label for="addltRange">Update LT by: {addlt} </label>  
     <input type="range" min="1" max="20" value={addlt} class="slider" change="->nstore.addlt"  id="addltRange">
   </div> 
 
