--- a/app/app.html
+++ b/app/app.html
@@ -47,7 +47,7 @@
 </component>
 
 <component id="MainPage">
-  <Navbar caption="Info" />
+  <Navbar caption="This is a demonstration of achieved during CW of Danila Litskevich" />
   <!-- <Panel caption="Icons">
     <LoadingIndicator />
     Using Font
@@ -64,8 +64,9 @@
     <Button icon="123" caption="Link" link />
   </Panel>
   <Panel caption="Panel" hint="with hint"> here... </Panel> -->
-
-  <button click="->" data-clicked={clicked|inc}>Clicked {clicked|or:0}</button>
+  <br/>
+  <h5>You can click that button</h5>
+  <button class="btn" click="->" data-clicked={clicked|inc}>Clicked {clicked|or:0}</button>
 
 </component>
 
