--- a/app/app.html
+++ b/app/app.html
@@ -47,23 +47,7 @@
 </component>
 
 <component id="MainPage">
-  <Navbar caption="This is a demonstration of achieved during CW of Danila Litskevich" />
-  <!-- <Panel caption="Icons">
-    <LoadingIndicator />
-    Using Font
-    <Icon type="cog" />
-  </Panel>
-  <Panel caption="Buttons">
-    <Button caption="Default" trackId="action1" />
-    <Button
-            icon="cog"
-            caption="Large primary with icon"
-            primary
-            large
-            class="m-2" />
-    <Button icon="123" caption="Link" link />
-  </Panel>
-  <Panel caption="Panel" hint="with hint"> here... </Panel> -->
+  <Navbar caption="Game bots demonstration" />
   <br />
   <h3>You can click that button
     <button class="btn" click="->" data-clicked={clicked|inc}>Clicked {clicked|or:0}</button>
